tests/NormalTests/paczka1/fuzzy1/30497588.err
Error in line 1: qxURYYNOX A340 30,7
Error in line 10: 47HM0uBDG S350 90,99
Error in line 20: 6ov1QBuFLN S247 8,5
Error in line 31: ?S'50
Error in line 34: A340 S247 5,6
